--- a/apropos.html
+++ b/apropos.html
@@ -7,25 +7,39 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Ours_content-et-Lagrafeur</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="videos.html">Vidéos</a></li>
-                <li><a href="apropos.html">À propos</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <section>
-        <h2>Qui sommes-nous ?</h2>
-        <p>Ours_content-et-Lagrafeur est une chaîne dédiée à l'humour et à la créativité. Rejoignez notre communauté et découvrez nos aventures !</p>
-    </section>
+<header>
+    <h1>Ours_content-et-Lagrafeur</h1>
+    <nav>
+        <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="videos.html">Vidéos</a></li>
+            <li><a href="apropos.html">À propos</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <form class="search-bar" action="/search" method="GET">
+                <input type="text" name="query" placeholder="Rechercher...">
+                <button type="submit">Rechercher</button>
+            </form>
+        </ul>
+    </nav>
 
-    <footer>
-        <p>&copy; 2024 Ours_content-et-Lagrafeur</p>
-    </footer>
+</header>
+
+<section>
+    <h2>Actualités</h2>
+    <p>12 septembre 2024 début de l'aventure, à ce jour un 51 abonné(e)s une évolution lente mais des vidéos dans la bonne humeur et avec l'espoir un jour de percer. Mon meilleur ami et moi avons décidé de réaliser cette chaîne pour nous amuser toute notre vie. Notre but est de vivre le mieux possible. C'est pour cela que nous passons une grande partie de nos journées à monter des vidéos que ce soit pour TikTok ou YouTube.</p>
+</section>
+
+<section>
+    <h2>Suivez-nous</h2>
+    <p>
+        <a href="https://www.tiktok.com/@lagrafeur_et_ourscontent?is_from_webapp=1&sender_device=pc" target="_blank">TikTok</a>
+    </p>
+</section>
+
+<footer>
+    <p>&copy; 2024 Ours_content-et-Lagrafeur</p>
+</footer>
+
 </body>
 </html>
