--- a/index.html
+++ b/index.html
@@ -15,13 +15,20 @@
                 <li><a href="videos.html">Vidéos</a></li>
                 <li><a href="apropos.html">À propos</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <form class="search-bar" action="/search" method="GET">
+                    <input type="text" name="query" placeholder="Rechercher...">
+                    <button type="submit">Rechercher</button>
+                </form>
             </ul>
         </nav>
     </header>
 
     <section>
         <h2>Bienvenue</h2>
-        <p>Explorez nos vidéos et découvrez un univers d'humour et de créativité !</p>
+        <p>
+            Passez nous voir sur notre chaine youtube 
+            <a href="https://youtube.com/@ours_content-et-lagrafeur?si=s9ZwVGXSwIwhxrZX">Ours Content et Lagrafeur</a>.
+        </p>
         <a href="videos.html" class="button">Voir les vidéos</a>
     </section>
 
