--- a/videos.html
+++ b/videos.html
@@ -15,6 +15,10 @@
                 <li><a href="videos.html">Vidéos</a></li>
                 <li><a href="apropos.html">À propos</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <form class="search-bar" action="/search" method="GET">
+                    <input type="text" name="query" placeholder="Rechercher...">
+                    <button type="submit">Rechercher</button>
+                </form>
             </ul>
         </nav>
     </header>
@@ -23,18 +27,29 @@
         <h2>Toutes nos vidéos</h2>
         <div class="videos">
             <div class="video">
-                <iframe width="320" height="180" src="https://www.youtube.com/embed/VIDEO_ID1" frameborder="0" allowfullscreen></iframe>
-                <p>Vidéo 1</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/H1K3CvJoVbc?si=e2Zkfoq9qjLTuZZu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <p>The forest Chapitre 1</p>
             </div>
             <div class="video">
-                <iframe width="320" height="180" src="https://www.youtube.com/embed/VIDEO_ID2" frameborder="0" allowfullscreen></iframe>
-                <p>Vidéo 2</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/UfVCNdX0M0o?si=uAPwykLDfAoiHlSm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <p>Muck</p>
             </div>
             <div class="video">
-                <iframe width="320" height="180" src="https://www.youtube.com/embed/VIDEO_ID3" frameborder="0" allowfullscreen></iframe>
-                <p>Vidéo 3</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/EmWjStRASFc?si=P3WKIjv30_rPXFDZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <p>Valorant</p>
             </div>
-            <!-- Ajoutez autant de vidéos que nécessaire -->
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/9A4g7b1lGqg?si=tclKCy2Cr3OC2R9-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <p>Valorant</p>
+            </div>
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/4DEOE1qJ2lE?si=fgyB6gAA4FF_V0qb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <p>One armed cook</p>
+            </div>
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/yhv7GClIeOE?si=pli-Cn9eqsLdHOgT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <p>One armed robber</p>
+            </div>
         </div>
     </section>
 
